fix: fix stretched images

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -116,6 +116,7 @@
 	width: 40px;
 	height: 40px;
 	border-radius: 24px;
+	object-fit: cover;
 }
 .home-navbar .navbar-container .menu .user-avatar:hover {
 	background: linear-gradient(145deg, #dcdcdc, #ffffff);
