--- a/src/css/order.css
+++ b/src/css/order.css
@@ -63,6 +63,7 @@
 	width: 117px;
 	height: 112px;
 	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+	object-fit: cover;
 	border-radius: 37px;
 }
 
